--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Latihan GIT</title>
 </head>
 <body>
+
+    <header> Ini adalah header </header>
+
     <h1>PT Maju Sejahtera</h1>
 
     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sint inventore totam. Expedita, rem corrupti. Provident aspernatur harum quas voluptatem, ullam a sunt fugit cum animi mollitia, ipsum quae aliquid!</div>
+
+    <footer>ini adalah footer</footer>
 </body>
 </html>
