--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <h1>PT Maju Sejahtera</h1>
 
-    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae sint inventore totam. Expedita, rem corrupti. Provident aspernatur harum quas voluptatem, ullam a sunt fugit cum animi mollitia, ipsum quae aliquid!</div>
+    <div>is About</div>
 
     <footer>ini adalah footer</footer>
 </body>
