--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,8 @@
 
     <div>Ini adalah halaman contact berisi form dan maps</div>
 
+    <div>Contoh perubahan baris 16</div>
+
     <footer>ini adalah footer</footer>
 </body>
 </html>
